--- a/index.html
+++ b/index.html
@@ -1,22 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <title>Task List</title>
-    
-</head>
-<body>
-    <div>Content goes here!</div>
-    <script
-    src="http://code.jquery.com/jquery-3.3.1.js"
-    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-    <script src="app.js"></script>
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+		integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+	<title>Task List</title>
+
+</head>
+
+<body>
+	<div class="Container">
+		<div class="row">
+			<div id="main" class="card">
+				<div class="card-content">
+					<span class="card-title">Task List</span>
+					<div class="row">
+						<form id="task-form">
+							<div class="input-field col s12">
+								<label for="task">New Task</label>
+								<input type="text" name="task" id="task" />
+							</div>
+							<input type="button" class="button" value="Add Task" />
+						</form>
+					</div>
+				</div>
+				<div class="card-action">
+					<h5 id="task-title">Tasks</h5>
+					<div class="input-field col s12">
+						<input type="text" id="filter" name="filter">
+						<label for="filter">Filter tasks</label>
+					</div>
+					<ul class="collection"></ul>
+					<a href="#" class="clear-tasks btn black">Clear Tasks</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	</div>
+
+
+	<script src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+	<script src="app.js"></script>
 </body>
+
 </html>
